--- a/style.css
+++ b/style.css
@@ -1,12 +1,38 @@
+body {
+	padding: 40px;
+	margin: auto;
+	width: 800px;
+}
 #osc {
 	background-color: orange;
 	width: 200px;
 	height: 50px;
 }
 
+.controls {
+	float: left;
+	width:400px;
+	padding-top: 30px;
+}
+
+.highlighted {
+	background-color: green !important;
+}
+
+button {
+	height: 60px;
+	width: 140px;
+}
+
+
+.pads {
+	padding-top: 30px;
+	float: left;
+	width:400px;
+}
 .pads div {
-	width: 100px;
-	height: 100px;
+	width: 60px;
+	height: 60px;
 	background-color: yellow;
-	margin: 20px;	
+	margin: 10px;
 }
