--- a/style.css
+++ b/style.css
@@ -1,12 +1,25 @@
 body {
 	padding: 40px;
 	margin: auto;
-	width: 800px;
+	width: 1000px;
 }
 #osc {
 	background-color: orange;
 	width: 200px;
 	height: 50px;
+}
+
+.attackSlider, .decaySlider, .tempoSlider {
+	width: 284px;
+	padding-bottom: 20px;
+}
+
+#playNotes {
+	background-color: rgb(181, 255, 181);
+}
+
+#stop {
+	background-color: rgb(255, 138, 138);
 }
 
 .controls {
@@ -16,7 +29,7 @@ body {
 }
 
 .highlighted {
-	background-color: green !important;
+	background-color: rgb(181, 255, 181) !important;
 }
 
 button {
@@ -39,6 +52,6 @@ button {
 .firstCol div, .secondCol div, .thirdCol div, .fourthCol div {
 	width: 60px;
 	height: 60px;
-	background-color: yellow;
+	border: 1px solid #999;
 	margin: 10px;
 }
